fix duplicate_session issue

--- a/client/index.html
+++ b/client/index.html
@@ -501,11 +501,12 @@
                     <p id="duplicate-session-message">Another connection is using this session.</p>
                 </div>
                 <p style="text-align: center; color: #aaa;">
-                    You cannot have multiple browser tabs/windows using the same session.
-                    Please close the other connection or log in with different credentials.
+                    You cannot have multiple browser tabs/windows using the same session.<br>
+                    Please use the other tab where you are already connected.
                 </p>
-                <button onclick="closeDuplicateSessionModal()">Close</button>
-                <button onclick="forceNewLogin()" style="background-color: #ff9800;">Login with New Session</button>
+                <p style="text-align: center; color: #888; font-size: 12px;">
+                    This connection has been closed.
+                </p>
             </div>
         </div>
     </div>
