--- a/client/index.html
+++ b/client/index.html
@@ -381,6 +381,63 @@
             margin: 0;
             opacity: 0.9;
         }
+
+        /* Leaderboard styles */
+        .leaderboard-item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px;
+            margin: 10px 0;
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.02) 100%);
+            border-radius: 8px;
+            border-left: 3px solid transparent;
+            transition: all 0.3s;
+        }
+
+        .leaderboard-item:hover {
+            background: linear-gradient(135deg, rgba(76, 175, 80, 0.15) 0%, rgba(76, 175, 80, 0.05) 100%);
+            border-left-color: #4CAF50;
+            transform: translateX(5px);
+        }
+
+        .leaderboard-rank {
+            font-weight: bold;
+            color: #FFD700;
+            font-size: 20px;
+            margin-right: 15px;
+            min-width: 50px;
+            display: inline-block;
+            text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
+        }
+
+        .leaderboard-player {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .leaderboard-stats {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            gap: 5px;
+        }
+
+        .leaderboard-rating {
+            font-size: 18px;
+            font-weight: bold;
+            color: #4CAF50;
+        }
+
+        .leaderboard-record {
+            font-size: 12px;
+            color: #aaa;
+        }
+
+        #leaderboard-list {
+            padding: 10px 5px;
+        }
     </style>
 </head>
 
@@ -437,6 +494,7 @@
 
             <div id="player-list"></div>
             <button onclick="getAvailablePlayers()">Refresh Players</button>
+            <button onclick="showLeaderboard()">Leaderboard</button>
             <button onclick="logout()">Logout</button>
         </div>
 
@@ -509,7 +567,23 @@
                 </p>
             </div>
         </div>
+
+        <!-- Leaderboard Modal -->
+        <div id="leaderboard-modal" class="modal-overlay" style="display:none;">
+            <div class="modal-content" style="max-width: 700px;">
+                <div class="modal-header">
+                    <h2>🏆 Leaderboard</h2>
+                    <button class="modal-close" onclick="closeLeaderboard()">×</button>
+                </div>
+                <div id="leaderboard-list" style="max-height: 500px; overflow-y: auto; padding: 0 10px;">
+                    <!-- Leaderboard entries will be inserted here -->  
+                </div>
+                <button onclick="closeLeaderboard()" style="margin-top: 20px; width: 100%;">Close</button>
+            </div>
+        </div>
     </div>
+
+
 
     <script type="module" src="./js/main.js"></script>
 </body>
